--- a/compute/Cargo.toml
+++ b/compute/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
-name = "fastly-compute-project"
-version = "0.1.0"
-authors = []
-edition = "2018"
+name = "mss-engine"
+version = "1.1.3"
+authors = ["Fastly <mss@fastly.com>"]
+edition = "2021"
+description = "MSS Engine - Edge security rules processing"
 publish = false
 
 [profile.release]
