--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "vce-core"
-version = "0.1.0"
+version = "1.1.4"
 edition = "2021"
 license = "MIT"
 authors = ["Fastly"]
@@ -14,6 +14,10 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 ron = "0.8"
 thiserror = "1.0"
+
+# Regex and IP network support
+regex = "1.10"
+ipnet = "2.9"
 
 # WASM support
 wasm-bindgen = "0.2"
