Add full BackendBuilder SDK parity with collapsible UI sections
Backend node now supports all Fastly BackendBuilder options:
- Timeouts: connect, first byte, between bytes
- TLS: certificate verification, SNI, min/max versions, client certs
- Connection pooling: keepalive, max connections, max uses, max lifetime
- TCP keepalive: time, interval, probes
- Host: override host, prefer IPv6

UI improvements:
- Collapsible sections (NodeSection component)
- Thinner selected node border (2px -> 1px)
- Show actual default values in placeholders (0 = unlimited)

Testing:
- Added 11 Rust unit tests for BackendNodeData serialization
- Added 2 JS integration tests for backend configuration

--- a/compute/Cargo.toml
+++ b/compute/Cargo.toml
@@ -6,6 +6,14 @@ edition = "2021"
 description = "Visual Compute Engine - Edge rules processing for Fastly Compute"
 publish = false
 
+[[bin]]
+name = "vce-engine"
+path = "src/main.rs"
+
+[lib]
+name = "vce_engine"
+path = "src/lib.rs"
+
 [profile.release]
 debug = false
 strip = true
