--- a/editor-ui/package.json
+++ b/editor-ui/package.json
@@ -9,15 +9,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/css": "^11.13.5",
+    "@emotion/react": "^11.14.0",
     "@fastly/beacon": "^0.49.0",
     "@fastly/beacon-icons": "^1.0.0",
+    "@fastly/beacon-mantine": "^0.10.0",
     "@fastly/beacon-tokens": "^0.15.2",
+    "@mantine/core": "^8.3.14",
+    "@mantine/hooks": "^8.3.14",
     "@types/pako": "^2.0.4",
     "@xyflow/react": "^12.10.0",
-    "vce-core": "file:../core/pkg",
     "pako": "^2.1.0",
     "react": "^19.2.1",
-    "react-dom": "^19.2.1"
+    "react-dom": "^19.2.1",
+    "vce-core": "file:../core/pkg"
   },
   "devDependencies": {
     "@types/react": "^19.2.7",
