--- a/deployment/nginx.conf
+++ b/deployment/nginx.conf
@@ -56,6 +56,18 @@ http {
             add_header Cache-Control "public, max-age=31536000, immutable";
         }
 
+        # Reverse proxy Fastly API (browser CORS won't allow direct calls from run.app)
+        location /fastly-api/ {
+            resolver 8.8.8.8 8.8.4.4 valid=300s;
+            proxy_pass https://api.fastly.com/;
+            proxy_ssl_server_name on;
+            proxy_set_header Host api.fastly.com;
+            proxy_set_header Accept-Encoding "";
+            proxy_pass_request_headers on;
+            proxy_read_timeout 60s;
+            client_max_body_size 50m;
+        }
+
         # SPA fallback - serve index.html for all routes
         location / {
             try_files $uri $uri/ /index.html;
